--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,12 +1,9 @@
 FROM node:alpine as builder
+COPY ./ /app
 WORKDIR /app
-
-COPY ./package.json ./
-RUN yarn install
-COPY ./ ./
-RUN yarn build
+RUN yarn install && yarn build
 
 FROM nginx
-EXPOSE 4000
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/dist /usr/share/nginx/html
+RUN mkdir /app
+COPY --from=builder /app/dist /app
+COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
