--- a/admin/nginx/nginx.conf
+++ b/admin/nginx/nginx.conf
@@ -19,8 +19,9 @@ http {
   server {
     listen 4000;
     server_name localhost;
+
     location / {
-      root /app;
+      root /admin;
       index index.html;
       try_files $uri $uri/ /index.html;
     }
