--- a/admin/nginx/app.conf
+++ b/admin/nginx/app.conf
@@ -1,5 +1,5 @@
 server {
-  listen 80;
+  listen 4000;
 
   server_name aveselovski.eu-north-1.elasticbeanstalk.com;
 
@@ -15,6 +15,7 @@ server {
     try_files $uri $uri/ /index.html = 404;
   }
 
+  # redirect server error pages to the static page /50x.html
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
     root /usr/share/nginx/html;
