--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -31,7 +31,7 @@ server {
 
   # pass traffic to admin
   location /admin {
-    proxy_pass http://admin;
+    proxy_pass http://admin/;
   }
 
   # pass traffic to backend and trim "/api"
